--- a/charts/rasa-x/Chart.yaml
+++ b/charts/rasa-x/Chart.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: v2
 
-version: "1.2.7"
+version: "1.2.8"
 appVersion: "0.27.4"
 
 name: rasa-x
 description: Rasa X Helm chart for Kubernetes / Openshift
-home: https://github.com/RasaHQ/rasa-x-helm
+home: https://github.com/GolemXlV/rasa-x-helm
 
 icon: "https://rasa.com/static/rasa-logo-square-ef3444fc36faec97ae8bd7bfb568996d.svg"
 
